[gd_scene load_steps=5 format=3 uid="uid://irvdwao610rg"]

[ext_resource type="Script" path="res://lp_4_1.gd" id="1_u3ih2"]

[sub_resource type="LabelSettings" id="LabelSettings_tfwow"]
font_size = 32

[sub_resource type="Theme" id="Theme_7xsyf"]
default_font_size = 32

[sub_resource type="Theme" id="Theme_ys7bp"]
default_font_size = 32

[node name="LP4-1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u3ih2")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 292.0
offset_bottom = 103.0
text = "Enter the number of copies:"
label_settings = SubResource("LabelSettings_tfwow")

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_top = 150.0
offset_right = 890.0
offset_bottom = 508.0
label_settings = SubResource("LabelSettings_tfwow")

[node name="txtCopies" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 473.0
offset_right = 890.0
offset_bottom = 86.0
theme = SubResource("Theme_7xsyf")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_top = 560.0
offset_right = 274.0
offset_bottom = 646.0
theme = SubResource("Theme_ys7bp")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 446.0
offset_top = 560.0
offset_right = 720.0
offset_bottom = 646.0
theme = SubResource("Theme_ys7bp")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 877.0
offset_top = 560.0
offset_right = 1151.0
offset_bottom = 646.0
theme = SubResource("Theme_ys7bp")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
